fix(header): Fixed content items visibility

--- a/app/src/ui/components/content-list/item/content-list-item.module.scss
+++ b/app/src/ui/components/content-list/item/content-list-item.module.scss
@@ -1,4 +1,6 @@
 .item {
+  align-self: start;
+
   .wrapper,
   .description {
     margin-bottom: .5rem;
